Initial pass on getting tests/jmh running
Signed-off-by: AterAnimAvis <AterAnimAvis@gmail.com>