@@ -1,13 +1,11 @@
 plugins {
     id 'net.minecraftforge.gradleutils' version '2.+'
     id 'com.github.ben-manes.versions' version '0.39.0'
-    id 'me.champeau.jmh' version '0.6.5'
-    id 'org.javamodularity.moduleplugin' version '1.8.7' apply false
+    id 'de.jjohannes.extra-java-module-info' version '0.11'
 }
 apply plugin: 'java-library'
 apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
-apply plugin: 'org.javamodularity.moduleplugin'
 
 group 'net.minecraftforge'
 
@@ -32,13 +30,19 @@ dependencyUpdates {
     }
 }
 
-test {
-    useJUnitPlatform()
-    forkEvery 1
+sourceSets {
+    jmh
+    testJars
 }
 
-sourceSets {
-    testJars
+extraJavaModuleInfo {
+    failOnMissingModuleInfo = false
+
+    automaticModule('typetools-0.8.3.jar', 'net.jodah.typetools')
+    automaticModule('jmh-core-1.34.jar', 'jmh.core')
+    automaticModule('powermock-core-2.0.9.jar', 'powermock.core')
+    automaticModule('powermock-reflect-2.0.9.jar', 'powermock.reflect')
+    automaticModule('jopt-simple-5.0.4.jar', 'jopt.simple')
 }
 
 ext.sharedManifest = manifest {
@@ -80,47 +84,95 @@ repositories {
     }
 }
 
-configurations.jmh {
-    resolutionStrategy {
-        force ('net.sf.jopt-simple:jopt-simple:5.0.4')
-    }
-}
-
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.+')
     testImplementation('org.powermock:powermock-core:2.0.+')
-    testImplementation('cpw.mods:modlauncher:9.0.+')
+    testImplementation('cpw.mods:modlauncher:9.1.+')
+    testImplementation('cpw.mods:securejarhandler:1.0.+')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.+')
     testImplementation('org.apache.logging.log4j:log4j-core:2.14.1')
     testImplementation('com.lmax:disruptor:3.4.2')
     testImplementation(sourceSets.testJars.runtimeClasspath)
+    testImplementation('org.jetbrains:annotations:21.0.1')
     testJarsImplementation(sourceSets.main.output)
     implementation('org.ow2.asm:asm:9.1')
     implementation('org.ow2.asm:asm-commons:9.1')
     implementation('org.ow2.asm:asm-tree:9.1')
     implementation('org.apache.logging.log4j:log4j-api:2.14.1')
-    implementation('cpw.mods:modlauncher:9.0.+')
+    implementation('cpw.mods:modlauncher:9.1.+')
     compileOnly('org.jetbrains:annotations:21.0.1')
     api('net.jodah:typetools:0.8.+')
-    jmhImplementation('cpw.mods:modlauncher:9.0.+')
+
+    jmhImplementation(sourceSets.main.output)
+    jmhImplementation(sourceSets.testJars.output)
+    jmhImplementation('org.openjdk.jmh:jmh-core:1.34')
     jmhImplementation('org.powermock:powermock-core:2.0.+')
-    jmhImplementation('org.ow2.asm:asm:9.1')
-    jmhImplementation('org.ow2.asm:asm-tree:9.1')
-    jmhImplementation('org.ow2.asm:asm-commons:9.1')
-    jmh('org.ow2.asm:asm:9.1')
+    jmhImplementation('cpw.mods:modlauncher:9.1.+')
+    jmhImplementation('cpw.mods:securejarhandler:1.0.+')
+//    jmhImplementation('org.ow2.asm:asm:9.1')
+//    jmhImplementation('org.ow2.asm:asm-tree:9.1')
+//    jmhImplementation('org.ow2.asm:asm-commons:9.1')
+    jmhAnnotationProcessor('org.openjdk.jmh:jmh-generator-annprocess:1.34')
 }
 
-jmh {
-    jvmArgs = ['-Djmh.separateClasspathJAR=true']
-    includes = [ 'net.minecraftforge.eventbus.benchmarks.EventBusBenchmark' ]
-    benchmarkMode = ['avgt' ]
-    profilers = [ 'stack' ]
-    timeOnIteration = '5s'
-    warmup = '5s'
-    warmupIterations = 3
-    iterations = 3
-    fork = 3
-    timeUnit = 'ns'
+configurations.jmhImplementation.extendsFrom(configurations.implementation)
+
+test {
+    dependsOn 'testsJar'
+    useJUnitPlatform()
+
+    systemProperty 'testJars.location', testsJar.archiveFile.get().asFile
+
+    jvmArgs(
+            '--module-path', classpath.asPath,
+            '--add-modules', 'ALL-MODULE-PATH',
+            '--add-opens', 'net.minecraftforge.eventbus/net.minecraftforge.eventbus=powermock.reflect',
+            '--add-opens', 'net.minecraftforge.eventbus/net.minecraftforge.eventbus.api=powermock.reflect',
+            '--add-opens', 'java.base/java.lang=powermock.reflect',
+            '--add-opens', 'java.base/java.util.concurrent=powermock.reflect',
+            '--add-reads', 'cpw.mods.modlauncher=net.minecraftforge.eventbus.test'
+    )
+
+    forkEvery 1
+}
+
+task jmh(type: JavaExec, dependsOn: jmhClasses) {
+    mainClass = 'org.openjdk.jmh.Main'
+    dependsOn 'testsJar'
+
+    def results = file("${project.reportsDir}/jmh/result.json")
+    doFirst {
+        results.parentFile.mkdirs()
+
+        systemProperty 'testJars.location', testsJar.archiveFile.get().asFile
+
+        jvmArgs(
+                '--module-path', sourceSets.jmh.runtimeClasspath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH',
+                '--add-opens', 'net.minecraftforge.eventbus/net.minecraftforge.eventbus=powermock.reflect',
+                '--add-opens', 'net.minecraftforge.eventbus/net.minecraftforge.eventbus.api=powermock.reflect',
+                '--add-opens', 'net.minecraftforge.eventbus.testjars/net.minecraftforge.eventbus.benchmarks.compiled=net.minecraftforge.eventbus.benchmarks',
+                '--add-opens', 'java.base/java.lang=powermock.reflect',
+                '--add-opens', 'java.base/java.util.concurrent=powermock.reflect',
+                '--add-opens', 'cpw.mods.modlauncher/cpw.mods.modlauncher=powermock.reflect',
+                '--add-reads', 'cpw.mods.modlauncher=net.minecraftforge.eventbus.benchmarks',
+                '--add-exports', 'net.minecraftforge.eventbus.benchmarks/net.minecraftforge.eventbus.benchmarks.jmh_generated=jmh.core',
+        )
+    }
+
+    args = [
+            'net.minecraftforge.eventbus.benchmarks.EventBusBenchmark',
+            '-bm', 'avgt',
+            '-prof', 'stack',
+            '-r', '5s',
+            '-w', '5s',
+            '-wi', '3',
+            '-i', '3',
+            '-f', '3',
+            '-tu', 'ns',
+            '-rf', 'json',
+            '-rff', results
+    ]
 }
 
 tasks['jmh'].dependsOn(clean)
